--- a/fly.toml
+++ b/fly.toml
@@ -10,3 +10,8 @@ app = "recipe-scraper"
 [[services]]
   processes = ["web"]
   internal_port = 8080
+  protocol = "tcp"
+
+  [[services.ports]]
+    port = 80
+    handlers = ["http"]
